# Mesh_Voxalization

./: README.md  environment.yml  pyproject.toml  requirements.txt  voxelise_example.py
examples/: blade13_5_voxelize.py  cad_voxelize.py  rtrc_bhousing_voxelize.py  run_CAD_voxelize.py
mesh_voxelisation/: __init__.py  mesh_utils.py  stl_io.py  voxelise.py
mesh_voxelisation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_voxelise.py
